# simultaneous-interpretation-desktop-app

./: .gitignore  CHANGELOG.md  PAYMENT.md  README.md  TODOS.md  project.yml
.github/workflows/: ci.yml  release.yml
IOSCompanion/: README.md  SPEC.md  project.yml
IOSCompanion/Sources/App/: IOSCompanionApp.swift
IOSCompanion/Sources/Models/: IOSModels.swift
IOSCompanion/Sources/Services/: TranscriptionService.swift  WiFiSyncService.swift
IOSCompanion/Sources/Views/: ContentView.swift  HistoryListView.swift  LiveTranslationView.swift  MeetingBriefView.swift  SettingsView.swift
SimultaneousInterpreter/App/: AppDelegate.swift
SimultaneousInterpreter/Models/: CodeSwitchingModels.swift  DiarizationModels.swift  IntelligenceModels.swift  InterpreterModels.swift  LanguageModels.swift  P2PModels.swift  PrivacyModels.swift  RecordingModels.swift
SimultaneousInterpreter/Resources/: Info.plist  languages.json  term_dictionary.json
SimultaneousInterpreter/Services/Audio/: AudioCaptureService.swift
SimultaneousInterpreter/Services/Audio/Windows/: WindowsAudioCaptureService.swift
SimultaneousInterpreter/Services/Diarization/: DiarizationService.swift  SpeakerClusterService.swift  SpeakerEmbeddingService.swift
SimultaneousInterpreter/Services/Intelligence/: ActionItemExtractor.swift  MeetingBriefPDFGenerator.swift  SummarizationService.swift
SimultaneousInterpreter/Services/Interpreter/: AudioBridgeService.swift  InterpreterPricingService.swift  InterpreterService.swift
SimultaneousInterpreter/Services/P2P/: P2PSessionManager.swift  ParticipantManager.swift  SignalingService.swift
SimultaneousInterpreter/Services/Payment/: LicenseManager.swift  PaymentService.swift
SimultaneousInterpreter/Services/Pipeline/: InterpreterPipeline.swift
SimultaneousInterpreter/Services/Privacy/: AttestationPDFGenerator.swift  AttestationService.swift  NetworkMonitor.swift
SimultaneousInterpreter/Services/Recording/: RecordingService.swift  TranscriptExporter.swift  TranscriptionArchiveService.swift
SimultaneousInterpreter/Services/Transcription/: WhisperTranscriptionService.swift
SimultaneousInterpreter/Services/Translation/: CodeSwitchingService.swift  LanguageDetector.swift  NLLBTranslationService.swift  TermDictionary.swift
SimultaneousInterpreter/Views/: InterpreterPanicButton.swift  OverlayView.swift  OverlayWindow.swift  TranscriptListView.swift
WindowsSimultaneousInterpreter/: CMakeLists.txt  README.md
WindowsSimultaneousInterpreter/models/: README.md
WindowsSimultaneousInterpreter/src/: AudioCapture.cpp  AudioCapture.h  Pipeline.cpp  Pipeline.h  TranscriptionEngine.cpp  TranscriptionEngine.h  TranslationEngine.cpp  TranslationEngine.h  main.cpp
WindowsSimultaneousInterpreter/src/UI/: OverlayWindow.cpp  OverlayWindow.h  TextRenderer.cpp  TextRenderer.h
docs/: SARAH_VALIDATION.md  WINDOWS_SPIKE.md
